--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -105,6 +105,18 @@
         <div>
             <a class="boton-pequeño" href="https://www.macgamestore.com/affiliate/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">WinGameStore</a>
         </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://gamebillet.com/customer/earnwithus" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Gamebillet</a>
+        </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://www.joybuggy.com/register-program" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">JoyBuggy</a>
+        </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://app.playsum.live/partner-program" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Playsum</a>
+        </div>
     </div>
 </div>
 
