--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -67,7 +67,7 @@
 
 		if (string.IsNullOrEmpty(userAgent) == false)
 		{
-			seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
 		}
 	}
 
