--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -76,7 +76,7 @@
 
 		if (string.IsNullOrEmpty(userAgent) == false)
 		{
-			seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
 		}
 	}
 
