--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -60,7 +60,7 @@
 
 		if (string.IsNullOrEmpty(userAgent) == false)
 		{
-			seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
 		}
 	}
 
