--- a/pepeizqs deals web/Pages/Subscriptions.cshtml
+++ b/pepeizqs deals web/Pages/Subscriptions.cshtml
@@ -40,7 +40,7 @@
 
         if (string.IsNullOrEmpty(userAgent) == false)
         {
-            seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+            seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
         }
     }
 
