--- a/pepeizqs deals web/Pages/curator.cshtml
+++ b/pepeizqs deals web/Pages/curator.cshtml
@@ -43,7 +43,7 @@
 
 		if (string.IsNullOrEmpty(userAgent) == false)
 		{
-			seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
 		}
 	}
 
