--- a/pepeizqs deals web/Pages/filter.cshtml
+++ b/pepeizqs deals web/Pages/filter.cshtml
@@ -42,7 +42,7 @@
 
 			if (string.IsNullOrEmpty(userAgent) == false)
 			{
-				seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+				seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
 			}
 		}
 
